Closed Bug 714676 Opened 13 years ago Closed 13 years ago

IonMonkey: Frame descriptors are not always correct

Categories

(Core :: JavaScript Engine, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

A few tests are failing because frame descriptors are not correct.
Attached patch fixSplinter Review
Two bugs here: one is that CallGeneric was not including the right frame size in its outgoing descriptor (the size must be the distance between the two frame headers), and EnsureExitFrame could overwrite the previous frame type.
Attachment #585334 - Flags: review?(jdemooij)
Attachment #585334 - Flags: review?(jdemooij) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: