Fix a few cases where frame descriptors were not correct (bug 714676, r=jandem),

--HG--
extra : rebase_source : f385c1090f946f52d67e88656728b07df05843aa